--- a/style.css
+++ b/style.css
@@ -17,12 +17,10 @@ h1 {
 p {
     margin: 0 0 5px;
 }
-.main-block {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+section {
+    position: absolute;
+    top: 50%;
+    left: 50%;
 }
 .form-ticket {
     padding: 25px;
