--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ section {
     position: fixed;
     top: 50%;
     left: 50%;
+    transform: translate(-50%, -50%);
 }
 .form-ticket {
     padding: 25px;
