Chỉnh sửa thiết kế

--- a/style.css
+++ b/style.css
@@ -54,10 +54,10 @@ input, textarea {
     outline: none;
     font-size: 18px;
 }
-input::placeholder {
-    color: #666;
-    font-weight: bolder;
-    font-size: 15px;
+label {
+    font-size: 18px;
+    padding-bottom: 2px;
+    font-weight: bold;
 }
 button {
     width: 100%;
