--- a/style.css
+++ b/style.css
@@ -11,8 +11,9 @@ html, body {
 }
 h1 {
     margin: 0 0 20px;
-    font-weight: 400;
+    font-weight: bolder;
     color: #1c87c9;
+    font-size: 20px;
 }
 p {
     margin: 0 0 5px;
