--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@ html, body {
     color: #666;
     max-width: 1000px;
     align-items: center;
-    background: #1c87c9;
+    background: #4618ac;
 }
 h1 {
     margin: 0 0 20px;
     font-weight: bolder;
-    color: #1c87c9;
+    color: #4618ac;
     font-size: 20px;
 }
 p {
@@ -69,11 +69,11 @@ button {
     width: 100%;
     padding: 10px;
     border: none;
-    background: #1c87c9;
+    background: #4618ac;
     font-size: 16px;
     font-weight: 400;
     color: #fff;
 }
 button:hover {
-    background: #2371a0;
+    background: #461800;
 }
